--- a/notebook/rating_cosin.ipynb
+++ b/notebook/rating_cosin.ipynb
@@ -159,7 +159,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from collections import defaultdict\n",
@@ -182,7 +184,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "user_average, _ = get_user_rating(users)"
@@ -191,7 +195,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import random\n",
@@ -1326,26 +1332,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/ntemiyasathit/Documents/CSE258/258_kaggle\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd .."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from custom_estimators.multi_labels import MultiLabelBinarizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "mlb = MultiLabelBinarizer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
-       "       ..., \n",
-       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.]])"
+       "MultiLabelBinarizer(classes=None, sparse_output=False)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "y_train = [['a'],['a', 'b'], ['a', 'b', 'c']]\n",
+    "mlb.fit(y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0, 0],\n",
+       "       [1, 0, 0],\n",
+       "       [0, 1, 0]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test = [['a'],['a','d'],['b']]\n",
+    "mlb.transform(y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
   },
   {
